--- a/style.css
+++ b/style.css
@@ -7,82 +7,36 @@
 body {
   background-color: #09090a;
   color: white;
-
+  font-family: "Inter", sans-serif;
   width: 100%;
-  height: 100vh;
-
   margin: 0 auto;
+  padding: 16px;
 }
 
-button {
-  padding: 16px 24px;
-  border-radius: 8px;
-
+.poetry-container {
   display: flex;
-  align-items: center;
-  gap: 12px;
-
-  color: white;
-  background-color: transparent;
-
-  border: 2px solid burlywood;
-
-  font-family: "Inter";
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 125%;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: space-between;
 }
 
-h1 dev {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-.text {
-  display: flex;
-  gap: 48px;
-  margin-left: 32px;
-  align-items: center;
-  justify-content: start;
-
-  margin-bottom: 8px;
-
-  font-family: "Inter";
-  font-size: 14px;
-  line-height: 125%;
-
+.poetry {
+  flex: 1 1 calc(50% - 16px); /* Cada poema ocupa 50% da largura com uma margem */
+  padding: 16px;
   background-color: #2e2e2e;
-  color: #9797a4;
-
-  text-align: left;
-
-  padding: 8px 16px;
   border: 2px solid #61616a;
   border-radius: 6px;
 }
 
-.blues {
-  display: flex;
-  gap: 48px;
-  margin-left: 32px;
-  align-items: center;
-  justify-content: start;
-
-  margin-bottom: 8px;
-
-  font-family: "Inter";
-  font-size: 14px;
-  line-height: 125%;
-
-  background-color: #353555d5;
+.poetry p {
+  line-height: 1.6;
   color: #9797a4;
+}
 
-  text-align: left;
-
-  padding: 8px 16px;
-  border: 2px solid #61616a;
-  border-radius: 6px;
+@media (max-width: 768px) {
+  .poetry {
+    flex: 1 1 100%; /* No mobile, os poemas ocupam 100% da largura */
+  }
 }
 
 a {
