--- a/style.css
+++ b/style.css
@@ -1,49 +1,53 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-  background-color: #09090a;
-  color: white;
-  font-family: "Inter", sans-serif;
-  width: 100%;
-  margin: 0 auto;
-  padding: 16px;
+    background-color: #09090a;
+    color: white;
+    font-family: "Inter", sans-serif;
+    width: 100%;
+    margin: 0 auto;
+    padding: 16px;
 }
 
 .poetry-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: space-between;
 }
 
 .poetry {
-  flex: 1 1 calc(50% - 16px); /* Cada poema ocupa 50% da largura com uma margem */
-  padding: 16px;
-  background-color: #2e2e2e;
-  border: 2px solid #61616a;
-  border-radius: 6px;
+    flex: 1 1 calc(50% - 16px); 
+    padding: 16px;
+    background-color: #2e2e2e;
+    border: 2px solid #61616a;
+    border-radius: 6px;
+    height: 480px;
+    overflow-y: scroll;
 }
 
 .poetry p {
-  line-height: 1.6;
-  color: #9797a4;
+    line-height: 1.6;
+    color: #9797a4;
 }
 
 @media (max-width: 768px) {
-  .poetry {
-    flex: 1 1 100%; /* No mobile, os poemas ocupam 100% da largura */
-  }
+    .poetry {
+        flex: 1 1 100%; 
+        margin: 8px;
+        height: fit-content;
+    }
 }
 
 a {
-  text-decoration: none;
-  background-color: #2e2e2e;
-  color: #a1a1aa;
-  border: 1px solid grey;
-  padding: 3px 5px;
-  border-radius: 4px;
+    text-decoration: none;
+    background-color: #2e2e2e;
+    color: #a1a1aa;
+    border: 1px solid grey;
+    padding: 3px 5px;
+    border-radius: 4px;
 }
